apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__nullability_formatting.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 56
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": null
    }
  }
}
