apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__query_reconstruction.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1551
expression: stream.next_response().await.unwrap()
---
{
  "errors": [
    {
      "message": "invalid type for variable: 'userId'",
      "extensions": {
        "name": "userId",
        "code": "VALIDATION_INVALID_TYPE_VARIABLE"
      }
    }
  ]
}
