apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__reconstruct_deferred_query_under_interface-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1836
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "name": "B"
      },
      "path": [
        "me",
        "memberships",
        0,
        "account"
      ]
    }
  ]
}
