apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__reconstruct_deferred_query_under_interface.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1835
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "me": {
      "id": 0,
      "fullName": "A",
      "memberships": [
        {
          "permission": "USER"
        }
      ]
    }
  },
  "hasNext": true
}
