apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__root_selection_not_skipped.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 364
expression: response
---
{
  "data": {
    "currentUser": {
      "id": "2",
      "name": "test"
    }
  }
}
