apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__root_selection_set_with_inline_fragment_statically_skipped.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 187
expression: response
---
{
  "data": {}
}
