apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__root_selection_skipped_with_other_fields.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 287
expression: response
---
{
  "data": {
    "otherUser": {
      "id": "2",
      "name": "test"
    }
  }
}
